--- a/.env
+++ b/.env
@@ -12,3 +12,26 @@ NODE_ENV=development
 # JWT Configuration
 JWT_SECRET=your_super_secret_jwt_key_for_development_only
 JWT_EXPIRES_IN=30d
+
+# File Upload Configuration (Optional - uses local fallback if not configured)
+# Uncomment and configure these for Google Cloud Storage:
+# PUBLIC_OBJECT_SEARCH_PATHS=/bucket-name/public
+# PRIVATE_OBJECT_DIR=/bucket-name/private
+
+# Email Configuration (Optional - for notifications)
+# SENDGRID_API_KEY=your_sendgrid_key
+# FROM_EMAIL=noreply@schoolpilot.edu
+
+# Application Settings
+APP_NAME=SchoolPilot
+APP_VERSION=1.0.0
+APP_URL=http://localhost:3000
+
+# Security Settings
+BCRYPT_ROUNDS=10
+SESSION_TIMEOUT_HOURS=24
+
+# Feature Flags
+ENABLE_FILE_UPLOAD=true
+ENABLE_EMAIL_NOTIFICATIONS=false
+ENABLE_AUTO_APPROVAL=false
